--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,9 @@
-runtime: nodejs18
+runtime: python27
+api_version: 1
+threadsafe: true
 handlers:
   - url: /
-    static_files: dist/index.html
-    upload: dist/index.html
-  - url: /(.*)
-    static_files: dist/\1
-    upload: dist/(.*)
+    static_files: dist/certy-get/index.html
+    upload: dist/certy-get/index.html
+  - url: /
+    static_dir: dist/certy-get
