--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@capacitor/android": "^5.6.0",
     "@capacitor/cli": "^5.6.0",
     "@capacitor/core": "^5.6.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@syncfusion/ej2-angular-richtexteditor": "^24.1.43",
+    "angular-font-awesome": "^3.1.2",
     "core-js": "^3.34.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
